force-app/main/default/objects/Training_Request__c/Training_Request__c.object-meta.xml
<CustomObject>
    <label>Training Request</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Training Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>