force-app/main/default/objects/Training_Request__c/fields/Customer_Survey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey__c</fullName>
    <label>Customer Survey</label>
    <type>Url</type>
</CustomField>