force-app/main/default/objects/Training_Request__c/fields/Trainer_Survey__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Survey__c</fullName>
    <label>Trainer Survey</label>
    <type>Url</type>
</CustomField>