force-app/main/default/objects/Training_Request__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <label>Training Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>